manifests/images.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-finder
          image: jakousa/dwk-app3-image-finder:b7fc18de2376da80ff0cfc72cf581a9f94d10e64
          resources:
            limits:
              ephemeral-storage: "256Mi"
              memory: "256Mi"
              cpu: "0.1"
          volumeMounts: # Mount volume
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: image-response
          image: jakousa/dwk-app3-image-response:b7fc18de2376da80ff0cfc72cf581a9f94d10e64
          resources:
            limits:
              ephemeral-storage: "256Mi"
              memory: "256Mi"
              cpu: "0.1"
          volumeMounts: # Mount volume
            - name: shared-image
              mountPath: /usr/src/app/files
